# tour-du-mont-blanc

./: LICENSE.md  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml  get-daily-availability.yml
calendar/: availability.csv  index.html  main.js
daily/: 2023-12-11.csv  2023-12-16.csv  2023-12-18.csv  2023-12-19.csv  2023-12-20.csv  2023-12-21.csv  2023-12-22.csv  2023-12-23.csv  2023-12-24.csv  2023-12-25.csv  2023-12-26.csv  2023-12-27.csv  2023-12-28.csv  2023-12-29.csv  2023-12-31.csv  2024-01-02.csv  2024-01-03.csv  2024-01-05.csv  2024-01-06.csv  2024-01-08.csv  2024-01-09.csv  2024-01-10.csv  2024-01-12.csv  2024-01-13.csv  2024-01-14.csv  2024-01-15.csv  2024-01-16.csv  2024-01-17.csv  2024-01-20.csv  2024-01-21.csv  2024-01-24.csv  2024-01-27.csv  2024-01-28.csv  2024-01-30.csv  2024-01-31.csv  2024-02-01.csv  2024-02-03.csv  2024-02-04.csv  2024-02-05.csv  2024-02-08.csv  (+157 more)
dashboard/: app.py
data/: analysis.ipynb  huts.csv  huts.json  refuges.csv  travel_times.csv
data/2024/: 2023-12-12.csv  2023-12-13.csv  2023-12-14.csv  2023-12-15.csv  2023-12-17.csv  2023-12-30.csv  2024-01-01.csv  2024-01-04.csv  2024-01-07.csv  2024-01-11.csv  2024-01-19.csv  2024-01-29.csv  2024-02-02.csv  2024-02-06.csv  2024-02-07.csv  2024-02-09.csv  2024-02-14.csv  2024-02-17.csv  2024-02-20.csv  2024-03-02.csv  2024-03-10.csv  2024-03-20.csv  2024-03-23.csv  2024-03-26.csv  2024-04-14.csv  2024-04-15.csv  2024-04-25.csv  2024-04-26.csv  2024-04-27.csv  2024-04-29.csv  2024-04-30.csv  2024-05-03.csv  2024-05-05.csv  2024-05-10.csv  2024-05-11.csv  2024-05-14.csv  2024-05-15.csv  2024-05-19.csv  2024-05-28.csv  2024-05-29.csv  (+22 more)
data/2025/: 2024-09-04.csv  2024-09-05.csv  2024-09-06.csv  2024-09-07.csv  2024-09-08.csv  2024-09-09.csv  2024-09-10.csv  2024-09-11.csv  2024-09-12.csv  2024-09-13.csv  2024-09-14.csv  2024-09-15.csv  2024-09-16.csv  2024-09-17.csv  2024-09-18.csv  2024-09-19.csv  2024-09-20.csv  2024-09-21.csv  2024-09-22.csv  2024-09-23.csv  2024-09-24.csv  2024-09-25.csv  2024-09-26.csv  2024-09-27.csv  2024-09-28.csv  2024-09-29.csv  2024-09-30.csv  2024-10-01.csv  2024-10-02.csv  2024-10-03.csv  2024-10-04.csv  2024-10-05.csv  2024-10-06.csv  2024-10-07.csv  2024-10-08.csv  2024-10-09.csv  2024-10-10.csv  2024-10-11.csv  2024-10-12.csv  2024-10-13.csv  (+1449 more)
notebooks/: analysis.ipynb
scripts/: get_availability.py  save_availability.py
tmb/: __init__.py  constants.py  get_availability.py  get_day_availbility.py  plot.py
