[project]
name = "tmb"
version = "0.1.0"
description = "Planning tool for Tour du Mont Blanc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pytest>=8.3.2",
    "brotli>=1.1.0",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
]

[dependency-groups]
dashboard = [
    "pandas>=2.1.3",
    "streamlit>=1.36.0",
]


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79


[tool.ruff.lint]
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]


[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["tests"]


[tool.mypy]
ignore_missing_imports = true


# TODO Remove when Streamlit supports UV.
[tool.poetry]
name = "tmb"
version = "0.1.0"
description = "Planning tool for Tour du Mont Blanc"
authors = ["Leon Lan <leonlan.yd@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leonlan/tour-du-mont-blanc"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dashboard.dependencies]
pandas = "^2.1.3"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
